# url-shortener

./: .dockerignore  .gitignore  README.md  Tiltfile  docker-compose.yml  id_rsa  id_rsa.pub  renovate.json
.github/: renovate.json
.github/workflows/: build-images.yml  pull-request.yml  release.yml  renovate.yaml  security-scan.yml
api/: .dockerignore  Dockerfile  Dockerfile.dev  main.py  pyproject.toml
api/app/: factory.py  routes.py
api/tests/: test_routes.py
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  api.yaml  client.yaml  ingress.yaml  redis.yaml
charts/security-policies/: Chart.yaml
charts/security-policies/templates/: cilium-network-policies.yaml
client/: .dockerignore  .yarnrc.yml  Dockerfile  Dockerfile.dev  package.json  vite.config.ts
client/src/: App.tsx
client/src/components/ui/: button.tsx
client/src/lib/: api.test.ts  api.ts  utils.ts
kustomize/base/: api.yaml  client.yaml  ingress.yaml  kustomization.yaml  redis.yaml
kustomize/overlays/dev/: ingress.yaml  kustomization.yaml
