[project]
name = "url-shortener"
version = "0.1.0"
description = "Simple example of URL shortening app"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.110.0",
    "python-multipart==0.0.9",
    "redis==5.0.3",
    "uvicorn==0.27.1",
]

[dependency-groups]
dev = [
    "httpx==0.27.0",
    "pytest==8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

