[project]
name = "url-shortener"
version = "0.1.0"
description = "Simple example of URL shortening app"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.135.3",
    "redis==5.0.3",
    "uvicorn==0.42.0",
]

[dependency-groups]
dev = [
    "httpx==0.27.0",
    "pytest==8.3.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
exclude-newer = "2 days"
